syntax = "proto3";
package rusk;

message SecretKey {
    bytes payload = 1;
}

message ViewKey {
    bytes payload = 1;
}

message PublicKey {
    bytes payload = 1;
}

message StealthAddress {
    bytes payload = 1;
}

message GenerateKeysRequest {}

message GenerateKeysResponse {
    SecretKey sk = 1;
    ViewKey vk = 2;
    PublicKey pk = 3;
}

service Keys {
    rpc GenerateKeys(GenerateKeysRequest) returns (GenerateKeysResponse) {}
    rpc GenerateStealthAddress(PublicKey) returns (StealthAddress) {}
}
