syntax = "proto3";
package rusk;

import "echo.proto";
import "network.proto";
import "prover.proto";
import "provisioner.proto";
import "transaction.proto";

message ExecuteStateTransitionRequest {
    repeated Transaction txs = 1;
    fixed64 block_gas_limit = 2;
    fixed64 block_height = 3;
}

message ExecuteStateTransitionResponse {
    bool success = 1;
    repeated Transaction txs = 2;
    bytes state_root = 3;
}

message VerifyStateTransitionRequest {
    repeated Transaction txs = 1;
    fixed64 block_gas_limit = 2;
    fixed64 block_height = 3;
}

message VerifyStateTransitionResponse {
    bool success = 1;
}

message GetProvisionersRequest {}

message GetProvisionersResponse {
    repeated Provisioner provisioners = 1;
}

message GetStateRootRequest {}

message GetStateRootResponse {
    bytes state_root = 1;
}

message GetNotesOwnedByRequest {
    uint64 height = 1;
    bytes vk = 2;
}

message GetNotesOwnedByResponse {
    repeated bytes notes = 1;
}

message GetAnchorRequest {}

message GetAnchorResponse {
    bytes anchor = 1; // BlsScalar
}

message GetOpeningRequest {
    bytes note = 1;
}

message GetOpeningResponse {
    bytes branch = 1; // PoseidonBranch<POSEIDON_TREE_DEPTH>
}

service State {
    rpc Echo(EchoRequest) returns (EchoResponse) {}
    rpc ExecuteStateTransition(ExecuteStateTransitionRequest) returns (ExecuteStateTransitionResponse) {}
    rpc VerifyStateTransition(VerifyStateTransitionRequest) returns (VerifyStateTransitionResponse) {}
    rpc Accept(ExecuteStateTransitionRequest) returns (ExecuteStateTransitionResponse) {}
    rpc Finalize(ExecuteStateTransitionRequest) returns (ExecuteStateTransitionResponse) {}
    rpc GetProvisioners(GetProvisionersRequest) returns (GetProvisionersResponse) {}
    rpc GetStateRoot(GetStateRootRequest) returns (GetStateRootResponse) {}
    rpc GetNotesOwnedBy(GetNotesOwnedByRequest) returns (GetNotesOwnedByResponse) {}
    rpc GetAnchor(GetAnchorRequest) returns (GetAnchorResponse) {}
    rpc GetOpening(GetOpeningRequest) returns (GetOpeningResponse) {}
}
